[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bilder/TileMaps/Spieloberflaeche.tres" type="TileSet" id=1]
[ext_resource path="res://Bilder/Buttons/StartEnde/nochmalSpielen_normal.png" type="Texture" id=2]
[ext_resource path="res://Bilder/Buttons/StartEnde/nochmalSpielen_pressed.png" type="Texture" id=3]
[ext_resource path="res://Skripte/TextureButton.gd" type="Script" id=4]
[ext_resource path="res://Bilder/Buttons/Spiel/Zahnrad.png" type="Texture" id=5]
[ext_resource path="res://Bilder/Hintergruende/Blob_gewonnen.png" type="Texture" id=6]
[ext_resource path="res://Bilder/Hintergruende/Endbildschirm_gewonnen.png" type="Texture" id=7]

[node name="EndeGewonnen" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 327680, 7, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0, 327684, 7, 0, 327685, 7, 0, 327686, 7, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 458752, 11, 0, 458753, 11, 0, 458754, 11, 0, 458755, 11, 0, 458756, 11, 0, 458757, 11, 0, 458758, 11, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0 )

[node name="NochmalSpielen" type="TextureButton" parent="."]
margin_left = 92.1908
margin_top = 559.13
margin_right = 348.191
margin_bottom = 615.13
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Optionen" type="TextureButton" parent="."]
margin_left = 373.151
margin_top = 15.6635
margin_right = 421.151
margin_bottom = 63.6635
texture_normal = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Blob_gewonnen" type="Sprite" parent="."]
position = Vector2( 278.722, 313.721 )
texture = ExtResource( 6 )

[node name="Endbildschirm_gewonnen" type="Sprite" parent="."]
position = Vector2( 228.992, 428.134 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
[connection signal="button_up" from="NochmalSpielen" to="NochmalSpielen" method="_on_NochmalSpielen_button_up"]
[connection signal="button_up" from="Optionen" to="Optionen" method="_on_Optionen_button_up"]
