[gd_scene load_steps=14 format=2]

[ext_resource path="res://Bilder/Hintergruende/OptionenHintergrund.png" type="Texture" id=1]
[ext_resource path="res://Bilder/Buttons/malen_normal.png" type="Texture" id=2]
[ext_resource path="res://Bilder/Buttons/malen_pressed.png" type="Texture" id=3]
[ext_resource path="res://Skripte/TextureButton.gd" type="Script" id=4]
[ext_resource path="res://Bilder/Buttons/code_normal.png" type="Texture" id=5]
[ext_resource path="res://Bilder/Buttons/code_pressed.png" type="Texture" id=6]
[ext_resource path="res://Bilder/Buttons/randomCoinAus.png" type="Texture" id=7]
[ext_resource path="res://Bilder/Buttons/randomCoinAn.png" type="Texture" id=8]
[ext_resource path="res://Bilder/Buttons/tonAus.png" type="Texture" id=9]
[ext_resource path="res://Bilder/Buttons/tonAn.png" type="Texture" id=10]
[ext_resource path="res://Bilder/Buttons/tempoAnpassen.png" type="Texture" id=11]
[ext_resource path="res://Bilder/Buttons/slider.png" type="Texture" id=12]

[sub_resource type="TileSet" id=1]
0/name = "OptionenHintergrund.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 192 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="Hintergrund rot" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 2, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65538, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65538, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65538, 262144, 0, 65536, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65538, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65538, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65538, 458752, 0, 131072, 458753, 0, 131073, 458754, 0, 131073, 458755, 0, 131073, 458756, 0, 131073, 458757, 0, 131074 )

[node name="MalenEditor" type="TextureButton" parent="."]
margin_left = 34.0
margin_top = 432.0
margin_right = 350.0
margin_bottom = 496.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 4 )

[node name="CodeEditor" type="TextureButton" parent="."]
margin_left = 34.0
margin_top = 360.0
margin_right = 350.0
margin_bottom = 424.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 4 )

[node name="RandomCoin" type="CheckButton" parent="."]
margin_left = 30.0
margin_top = 280.0
margin_right = 358.0
margin_bottom = 352.0
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 8 )
pressed = true

[node name="Ton" type="CheckButton" parent="."]
margin_left = 30.0
margin_top = 208.0
margin_right = 358.0
margin_bottom = 280.0
custom_icons/off = ExtResource( 9 )
custom_icons/on = ExtResource( 10 )
pressed = true

[node name="tempoAnpassen" type="Sprite" parent="."]
position = Vector2( 198, 144 )
texture = ExtResource( 11 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 34.0
margin_top = 180.0
margin_right = 350.0
margin_bottom = 207.0
custom_icons/grabber_highlight = ExtResource( 12 )
custom_icons/grabber = ExtResource( 12 )
min_value = 1.0
max_value = 5.0
value = 3.0
tick_count = 5
ticks_on_borders = true
[connection signal="button_up" from="MalenEditor" to="MalenEditor" method="_on_MalenEditor_button_up"]
[connection signal="button_up" from="CodeEditor" to="CodeEditor" method="_on_CodeEditor_button_up"]
